tests/ui/rfcs/rfc-0000-never_patterns/bindings.stderr
error[E0408]: variable `_x` is not bound in all patterns
  --> $DIR/bindings.rs:11:18
   |
LL |         Ok(_x) | Err(&!) => {}
   |            --    ^^^^^^^ pattern doesn't bind `_x`
   |            |
   |            variable not in all patterns

error[E0408]: variable `_x` is not bound in all patterns
  --> $DIR/bindings.rs:14:19
   |
LL |     let (Ok(_x) | Err(&!)) = x;
   |             --    ^^^^^^^ pattern doesn't bind `_x`
   |             |
   |             variable not in all patterns

error[E0408]: variable `_a` is not bound in all patterns
  --> $DIR/bindings.rs:23:9
   |
LL |         Ok(_ok) | Err(&(_a, _b, !)) => {}
   |         ^^^^^^^         -- variable not in all patterns
   |         |
   |         pattern doesn't bind `_a`

error[E0408]: variable `_b` is not bound in all patterns
  --> $DIR/bindings.rs:23:9
   |
LL |         Ok(_ok) | Err(&(_a, _b, !)) => {}
   |         ^^^^^^^             -- variable not in all patterns
   |         |
   |         pattern doesn't bind `_b`

error[E0408]: variable `_ok` is not bound in all patterns
  --> $DIR/bindings.rs:23:19
   |
LL |         Ok(_ok) | Err(&(_a, _b, !)) => {}
   |            ---    ^^^^^^^^^^^^^^^^^ pattern doesn't bind `_ok`
   |            |
   |            variable not in all patterns

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0408`.
